--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body
 {
     font-family: "sans- serif";
-    background: url(/images/background.jpg)no-repeat;
+    background: url(../images/background.jpg)no-repeat;
     color: white;
     background-size: cover;
     margin: auto;
